# allegro5

./: .gitignore  CMakeLists.txt
.github/workflows/: codeql-analysis.yml
addons/allegrogl/: CMakeLists.txt
addons/allegrogl/examp/: exext.c
addons/allegrogl/src/: glext.c  win.c
addons/audio/: aqueue.m
addons/image/: bmp.c  macosx.m
addons/jpgalleg/: CMakeLists.txt
addons/jpgalleg/src/: decode.c  io.c
addons/loadpng/: CMakeLists.txt  loadpng.c  savepng.c
addons/logg/: CMakeLists.txt
addons/primitives/: high_primitives.c
cmake/: FindOpus.cmake  FindTheora.cmake  FindVorbis.cmake
docs/: Refman.cmake
docs/scripts/: make_doc.c  make_single.c  scan_examples.c
docs/src/makedoc/: makehtml.c
docs/src/refman/: system.txt
examples/: CMakeLists.txt  ex_audio_simple.c  ex_bitmap_palette.c  ex_native_filechooser.c  ex_prim.c  ex_prim_wrap.c  ex_skerm.c  ex_windows.c
include/allegro/inline/: draw.inl
include/allegro5/: bitmap.h
include/allegro5/internal/: aintern_bitmap.h
include/allegro5/platform/: alplatf.h.cmake
src/: bitmap.c  cpu.c  datafile.c  file.c  flood.c  fsel.c  glyph.c  gsprite.c  gui.c  guiproc.c  poly3d.c  scene3d.c  unicode.c
src/macosx/: hidman.m  osxgl.h  osxgl.m
src/misc/: vbeaf.c
src/unix/: ufile.c
src/win/: d3d_disp.cpp  wddlock.c
tests/win/: scrsave.c
tools/: datedit.c  grabber.c
tools/plugins/: datitype.c
